--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
+    "embla-carousel-autoplay": "^8.3.1",
+    "embla-carousel-react": "^8.3.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.358.0",
     "mongodb": "^6.10.0",
