--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.4",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,7 +29,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "next": "^14.2.18",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
